Added async leaderboard and loading label.